--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,65 +1,80 @@
-set nocompatible
-set wildmenu
-set showcmd
-set hlsearch
-set encoding=utf-8
-set scrolloff=5
-set ignorecase
-set smartcase
-set backspace=indent,eol,start
-set autoindent
-set showmode
-set nostartofline
-set ruler
-set laststatus=2
-set confirm
-set visualbell
-set mouse=a
-set number
-set relativenumber
-set notimeout ttimeout ttimeoutlen=200
-set shiftwidth=2
-set tabstop=2
-map Y y$
-nnoremap <C-L> :nohl<CR><C-L>
-syntax on
 let mapleader = " "
-nnoremap <leader>s :noh<cr>
-nnoremap <tab> %
-vnoremap <tab> %
-nnoremap ` '
-nnoremap ' `
-nnoremap <leader>v V`]
-inoremap jj <ESC>
-nnoremap <Leader>w <C-w>v<C-w>l
-filetype plugin indent on
-" Json beautify
-nnoremap <leader>m :set syntax=json<cr>:execute '%! python -m json.tool'<cr>
 
-" Splits keybinds
-nnoremap <A-h> <C-w>h
-nnoremap <A-j> <C-w>j
-nnoremap <A-k> <C-w>k
-nnoremap <A-l> <C-w>l
-inoremap <A-h> <ESC><C-w>hi
-inoremap <A-j> <ESC><C-w>ji
-inoremap <A-k> <ESC><C-w>ki
-inoremap <A-l> <ESC><C-w>li
-nnoremap <leader>T :enew<cr>
-nnoremap <leader>l :bnext<cr>
-nnoremap <leader>h :bprevious<cr>
-vnoremap <C-r> "hy:%s/<C-r>h//g<left><left>
-nnoremap j gj
-nnoremap k gk
-nnoremap <silent> <C-S> :<C-u>Update<CR>
-nnoremap <A-t>     :tabnew<CR>
-inoremap <A-t>     <Esc>:tabnew<CR>
-setlocal foldmethod=indent
-autocmd BufWinLeave *.* mkview
-autocmd BufWinEnter *.* silent loadview 
-:map <F4> <C-W>w
-colorscheme koehler
+"powerline
+set guifont=Hack\ 11
+set laststatus=2
+"highlight matches with last search pattern
+set hlsearch
+"ignore case in search patterns
+set ignorecase
+"no ignore case when pattern has uppercase
+set smartcase
+"message on status line to show current mode
+set showmode
+"print the line number in front of each line
+set number
+"show the line number relative to the line with
+set relativenumber
+"time that is waited for a mapped key sequence
+set notimeout ttimeout ttimeoutlen=200
+
+"Alt + movement in insert mode will move
 inoremap <A-h> <C-o>h
 inoremap <A-j> <C-o>j
 inoremap <A-k> <C-o>k
 inoremap <A-l> <C-o>l
+
+" easy system clipboard copy/paste
+noremap <Leader>y "*y
+noremap <Leader>Y "*Y
+noremap <Leader>p "*p
+noremap <Leader>P "*P
+
+" Jump to beginning and end of lines easier. From http://vimbits.com/bits/16
+nnoremap H ^
+nnoremap L $
+
+"Remap U to redo (easier than C-r)
+nnoremap U <C-r>
+
+"global
+nnoremap <Leader>; :action CommentByLineComment<CR>
+nnoremap <Leader><Tab> :action Switcher<CR>
+nnoremap <Leader>! :action ActivateTerminalToolWindow<CR>
+
+"error section
+"- also triggers the Error Description popup
+nnoremap <Leader>en :action GotoNextError<CR> :action ShowErrorDescription<CR>
+nnoremap <Leader>eN :action GotoPreviousError<CR>:action ShowErrorDescription<CR>
+nnoremap <Leader>ep :action GotoPreviousError<CR>:action ShowErrorDescription<CR>
+
+"compile
+nnoremap <Leader>cf :action Compile<CR>
+nnoremap <Leader>cc :action CompileProject<CR>
+
+"file
+nnoremap <Leader>ft :action ActivateProjectToolWindow<CR>
+nnoremap <Leader>ff :action GotoFile<CR>
+nnoremap <Leader>fl :action GotoFile<CR>
+nnoremap <Leader>fr :action RecentFiles<CR>
+nnoremap <Leader>fR :action RenameFile<CR>
+nnoremap <Leader>fg :action FindInPath<CR>
+nnoremap <Leader>fb :action ToggleBookmark<CR>
+nnoremap <Leader>fB :action ShowBookmarks<CR>
+"- intellij settings
+nnoremap <Leader>fe :action ShowSettings<CR>
+nnoremap <Leader>fo :action ShowFilePath<CR>
+"- Require File Name Grobber plugin
+nnoremap <Leader>fy :action CopyFileName<CR>
+
+"git
+"- git blame
+nnoremap <Leader>gb :action Annotate<CR>
+nnoremap <Leader>gc :action Git.Branches<CR>
+
+"quit
+nnoremap <Leader>q :action HideActiveWindow<CR>
+
+"jump/join/split
+nnoremap <Leader>jf :action FileStructurePopup<CR>
+nnoremap <Leader>jj :action AceAction<CR>
