adding keybind to focus opened editor

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -80,5 +80,7 @@
                 "esc"
             ]
         }
-    ]
+    ],
+    "vim.statusBarColorControl": true,
+    "vim.surround": true
 }
