vscode adding the get hover info on leader i

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -7,6 +7,19 @@
         {
             "before": [
                 "leader",
+                "i"
+            ],
+            "after": [],
+            "commands": [
+                {
+                    "command": "editor.action.showHover",
+                    "args": []
+                }
+            ]
+        },
+        {
+            "before": [
+                "leader",
                 "f",
                 "f"
             ],
